<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/ll_header_main"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="70dip"
                    android:layout_height="40dip"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dip"
                    android:src="@drawable/dl_daoli" />

                <Button
                    android:id="@+id/bt_back2pre"
                    android:layout_width="70dip"
                    android:layout_height="37dip"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5dip"
                    android:background="@drawable/button_seletor"
                    android:text="@string/backUp"
                    android:textColor="@android:color/white"
                    android:visibility="invisible"
                    android:textSize="14dip" />
                <Button
                    android:id="@+id/bt_setting"
                    android:layout_width="70dip"
                    android:layout_height="37dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dip"
                    android:background="@drawable/button_long_selected"
                    android:text="@string/setting"
                    android:textColor="@android:color/white"
                    android:textSize="14dip" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/devider_round" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/content_from_phone"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </RelativeLayout>

            <!--
         <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:foregroundGravity="center_horizontal"
        android:orientation="vertical" >
            -->

            <RelativeLayout
                android:id="@+id/ll_content"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/ll_header_main" >

                <TextView
                    android:id="@+id/tv_path"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="当前文件路径。。。" />

                <ListView
                    android:id="@+id/lv_file"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/tv_path"
                    android:layout_marginTop="2dip" >
                </ListView>
            </RelativeLayout>

            <!--
                 <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dip"
                
                android:layout_marginLeft="2dip"
                android:layout_marginRight="2dip"
                android:background="@drawable/devider_round" />
            -->

            <LinearLayout
                android:id="@+id/ll_menubar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_content"
                android:layout_marginTop="2dip"
                android:orientation="horizontal"
                android:background="@drawable/menu_bg" >

                <Button
                    android:id="@+id/bt_add2cloud"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_weight="1"
                    android:background="@drawable/button_seletor"
                    android:gravity="center"
                    android:text="@string/add2cloud"
                    android:textColor="@android:color/white"
                    android:textSize="19sp"
                     />

                <Button
                    android:id="@+id/tv_login_info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/button_seletor"
                    android:gravity="center"
                    android:visibility="gone"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/bt_select_all"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_weight="1"
                    android:background="@drawable/button_seletor"
                    android:gravity="center"
                    android:text="@string/selectAll"
                    android:textColor="@android:color/white"
                    android:textSize="19sp"
                    />

            </LinearLayout>

        <!--     <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:layout_below="@id/ll_menubar"
                android:layout_marginLeft="2dip"
                android:layout_marginRight="2dip"
                android:background="@drawable/devider_round" /> -->

            <RelativeLayout
                android:id="@+id/ll_datafromcloud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/ll_content"
                android:layout_marginTop="5dip"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <!--
        <RelativeLayout
            android:id="@+id/ll_datafromcloud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/ll_content"
            android:layout_marginTop="50dip"
            android:gravity="center_horizontal"
            android:orientation="vertical" >
                -->


                <!--
                 <ListView
                android:id="@+id/lv_datafromcloud"
                android:layout_width="match_parent"
                android:layout_height="200dp" >
            </ListView>
                -->

                <ImageView
                    android:id="@+id/handle"
                    android:layout_width="50dip"
                    android:layout_height="50dip"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/select_yun_m"
                    android:text="@string/cloud" />
            </RelativeLayout>
        </LinearLayout>

        <SlidingDrawer
            android:id="@+id/sd_cloud"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:content="@+id/content"
            android:handle="@+id/ivhandle"
            android:orientation="vertical"
            android:topOffset="0dip"
            >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >
                
                <ImageView
                    android:id="@id/ivhandle"
                    android:layout_width="50dip"
                    android:layout_height="50dip"
                    android:src="@drawable/select_yun_m" />
            </LinearLayout>

            <LinearLayout
                android:id="@id/content"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <ListView
                    android:id="@+id/lv_cloud"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/bg" >
                </ListView>
            </LinearLayout>
        </SlidingDrawer>
    </FrameLayout>

    <!-- </com.daolicloud.box.view.TempSlidingDrawer> -->
    <!-- </FrameLayout> -->

</RelativeLayout>